2008-07-10  Mike Krüger <mkrueger@novell.com> 

	* CSharpBinding.addin.xml: accidentally checked in new code completion
	  enabled addin file.

2008-07-10  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/NewCSharpExpressionFinder.cs,
	  Gui/CSharpTextEditorCompletion.cs, Parser/DomParser.cs: Worked on
	  code completion. Added new expression finder from sharpdevelop3
	  (LGPL).

2008-07-09  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs, Gui/NRefactoryParameterDataProvider.cs: Worked
	  on new dom.

2008-07-09  Mike Krüger <mkrueger@novell.com> 

	* CSharpBinding.addin.xml: switched back to old code completion.

2008-07-09  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs, Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: Worked on method completion.

2008-07-08  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/CSharpTextEditorCompletion.cs: Worked on completion.

2008-07-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs,
	  Parser/DomParser.cs, Parser/mcs/dom.cs: Worked on completion.

2008-07-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/CSharpTextEditorCompletion.cs: Worked on code completion.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs: Worked
	  on text editor completion.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* Parser/Parser.cs: fixed Bug 405930 - FoldingRegions in compilation
	  units are all folded by default.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs, Gui/CSharpTextEditorCompletion.cs: Worked on
	  completion.

2008-06-25  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,